# 2easy_team

./: .gitignore  DIARY.md  README.md
car_avoidance/: CMakeLists.txt  package.xml  setup.py
car_avoidance/launch/: car_avoidance_detector.launch  test2avoidance.launch
car_avoidance/scripts/: detector.py
competition_sm/: CMakeLists.txt  package.xml  setup.py
competition_sm/launch/: launch_all_mision.launch  launch_mission_1.launch
competition_sm/scripts/: all_missions.py
competition_sm/src/competition_sm/: follow_waypoints.py  mission_1.py  mission_2.py  mission_4.py  mission_5.py  mission_6.py  shellcmd.py
demo_code/: CMakeLists.txt  demo_code.py  package.xml  setup.py
demo_code/scripts/: demo_code.py
follow_waypoints/: CMakeLists.txt  package.xml  setup.py
follow_waypoints/scripts/: waypoints_recorder.py
moving_hackathon_tools/: Autoware_commands.md  CMakeLists.txt  package.xml
moving_hackathon_tools/launch/: detectors_real_car.launch  downsample_pointcloud.launch  real_car.launch  xbox360_teleop.launch
moving_hackathon_tools/rviz/: coolconfig.rviz
moving_hackathon_tools/scripts/: base_waypoints_test.py  darknet_pedestrian_detector.py  execute_waypoints.py  execute_waypoints_car.py  execute_waypoints_car_nomission.py  hsv_trackbars.py  keyboard_teleop_car.py  (+10 more)
pedestrian_detector/: CMakeLists.txt  package.xml  setup.py
stop_detector/: CMakeLists.txt  package.xml  setup.py
tools/: keyboard_teleop_car.py  twist_to_twiststamped.py  xbox360_teleop.launch
traffic_light_detector/: CMakeLists.txt  README.md  package.xml  setup.py
waypoints_data/: full_round_from_after_traffic_light.csv  saved_waypoints.csv  saved_waypoints_10km.csv  saved_waypoints_3km.csv  saved_waypoints_5km.csv  test_in_factory.csv  wide_u_turn.csv
(+44 files in other folders)
