<?xml version="1.0"?>
<package format="2">
  <name>demo_code</name>
  <version>0.0.0</version>
  <description>The demo code contains a simple code that you can use to prepare for the competition. It only publishes a simple topic.</description>

  <maintainer email="Sammy.Pfeiffer@student.uts.edu.au">Sammy Pfeiffer</maintainer>
  <author email="eferrera@catec.aero">Eduardo Ferrera</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
